2003-06-17  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* *** version 0.17
	* src/lang.c: make a bit secure.
	* doc/gimmick.escm, doc/readme.escm: update.
	
2003-06-13  TAGA Yoshitaka  <tagga@tsuda.ac.jp>
	
	* src/escm.c, src/escm.h: changed the interface of escm_error().
	* src/meta_arg.c: rewrite the parser of meta-arguments.
	* src/lang.c: rewrite the parser of configuration files.
	* src/escm_scm.c, src/escm_scm.h: absorbed in src/escm.[ch].
	* test/t130_preset.test, test/t140_prst_awk.test,
	  test/t150_comment.test: add more tests.

2003-06-10  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* Remove src/escm/* which have been moved to src/.
	* configure.ac, src/Makefile.am, and others: libtoolized.
	* src/filter.c, src/lang.c: fix bugs on getting the interpreter
	  name from config files.
	* test/t110_string.test, test/t120_awk.test: add more tests.
	
2003-06-09  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* *** version 0.16
	* Too many changes while my notebook was disconnected from the Net.
	
2002-12-25  Shiro Kawai  <shiro@acm.org>

	* all files: checked in to the SourceForge repository.

2002-12-26  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* *** version 0.15

	* src/Makefile.am, src/escm/escm.c, src/escm/escm.h, src/main.c,
	awk/Makefile, configure.ac: Add the metaswitch mechanism.

2002-12-23  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* *** version 0.14

	* scm/gosh.sh, scm/guile.sh, scm/rep.sh, scm/stklos.sh,
	Makefile.am, configure.ac: Rename cfg/ to scm/.

	* awk/make-lang-c.awk, awk/parse.awk: Rename parse.awk to
	make-lang-c.awk.

	* awk/Makefile, awk/addlang-am.awk, awk/addlang.awk,
	awk/configure-ac.awk, awk/make-lang-c.awk, configure.ac,
	doc/Makefile.am, src/Makefile.am, src/addlang.h, src/main.c,
	Makefile.am: New scheme to add language supports

	* *** version 0.13 ***

	* awk/parse.awk, src/lang/Makefile.am, src/lang/awk.c,
	src/lang/csh.c, src/lang/perl.c, src/lang/python.c,
	src/lang/ruby.c, src/lang/scm.c, src/lang/sh.c, src/lang/tcl.c,