@@ -11,15 +11,51 @@
 #ifdef HAVE_STDLIB_H
 #include <stdlib.h>
 #endif /* HAVE_STDLIB_H */
+#include <string.h>
 
 #include "escm.h"
-#include "escm_scm.h"
 
 #ifdef ESCM_SCM
 const char *scm_interp = ESCM_SCM;
 #else
 const char *scm_interp = "gosh -b"
 #endif /* ESCM_SCM */
+
+void
+escm_cgi_put(struct escm_lang *lang, FILE *outp)
+{
+  const char *content_length;
+  const char *p;
+  long llen;
+  int len;
+  int c;
+
+  content_length = getenv("CONTENT_LENGTH");
+  if (content_length == NULL) escm_define(lang, "escm-cgi-post", "", outp);
+  else {
+    fputs(lang->define_prefix, outp);
+    for (p = "escm-cgi-post"; *p; p++) {
+      if (*p == '-' && !lang->use_hyphen) {
+	fputc('_', outp);
+      } else {
+	fputc(*p, outp);
+      }
+    }
+    fputs(lang->define_infix, outp);
+    llen = strtol(content_length, &p, 10);
+    if (*p == '\0') {
+      fputc('\"', outp);
+      len = (int) llen;
+      while ((c = getc(stdin)) != EOF && len-- > 0) {
+	fputc(c, outp);
+      }
+      fputc('\"', outp);
+    } else {
+      fputs("\"\"", outp);
+    }
+    fputs(lang->define_suffix, outp);
+  }
+}
 
 /* main function
  */
@@ -52,6 +88,7 @@ main(void)
   escm_define(&lang_scm, "escm-interpreter", scm_interp, outp);
   escm_define(&lang_scm, "escm-output-file", NULL, outp);
   escm_define(&lang_scm, "escm-input-file", path, outp);
+  escm_cgi_put(&lang_scm, outp);
 
   inp = fopen(path, "r");
   if (inp == NULL) escm_error(NULL);
