@@ -1,3 +1,11 @@
+2003-06-20  TAGA Yoshitaka  <tagga@tsuda.ac.jp>
+	* src/filter.c, src/handler.c: ad hoc mechanism to acquire POSTed
+	  query strings (bound to *escm-cgi-post*)
+
+2003-06-19  TAGA Yoshitaka  <tagga@tsuda.ac.jp>
+
+	* src/handler.c: bugfix.
+	
 2003-06-17  TAGA Yoshitaka  <tagga@tsuda.ac.jp>
 
 	* *** version 0.17
